﻿1.5.1 (next)
------------------
+ [enhancement][fj-doc-mod-fop] Added format for PDF/UA-1 (user accessibility standard)
+ [enhancement][fj-doc-mod-fop] Added constants for PDF/A-2a and PDF/A-3a formats (user accessibility standard)

1.5.0 (2023-08-20)
------------------
+ [enhancement][fj-doc-base] Now DocTypeHandlerDefault implements ConfigurableObject instead of extending XMLConfigurableObject to reduce hierarchy depth[1.5.0-rc.3]
+ [dependency]Updated fj-version to 8.1.0 [1.5.0-rc.3]
+ [enhancement][fj-doc-base] DocConstants refactor to conform to singleton pattern [1.5.0-rc.3]
+ [removed][fj-doc-mod-fop] removed org.fugerit.java.doc.mod.fop.FreeMarkerFopProcess [1.5.0-rc.3] 
+ [removed][fj-doc-val-pdfbox] removed deprecated class org.fugerit.java.doc.val.pdf.boc.PdfboxValidator [1.5.0-rc.3] 
+ [enhancement] added sonar cloud quality gate [1.5.0-rc.3] 
+ [enhancement][fj-doc-lib-autodoc] now the default html does not use a template but the standard html generation [1.5.0-rc.3]
+ [enhancement][fj-doc-freemarker] html type handler automatically add doctype and xml lang (default to 'en') [1.5.0-rc.3]
+ [enhancement][fj-doc-base] doc-2-1.xsd (added new 'alt' attribute for table) [1.5.0-rc.3]
+ [enhancement][fj-doc-freemarker] added doctype definition to html type handler [1.5.0-rc.3]
+ [documentation][fj-doc-base]Added documentation to the doc-2-0.xsd [1.5.0-rc.2]
+ [enhancement][fj-doc-mod-fop] optimization in style rendering for FO/PDF Type Handler [1.5.0-rc.2]
+ [enhancement][fj-doc-mod-fop] added support for table 'padding' and 'spacing' (convert to fo cell padding and margin) [1.5.0-rc.2]
+ [enhancement][fj-doc-freemarker] added support for table 'padding' and 'spacing' (convert to html cell padding and margin) [1.5.0-rc.2]
+ [enhancement][fj-doc-base] Added generic meta information 'default-table-spacing' and 'default-table-padding' [1.5.0-rc.2]
+ [enhancement][fj-doc-playground-quarkus] updated quarkus version to 3.2.4.Final [1.5.0-rc.2]