@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.fugerit.java</groupId>
 		<artifactId>fj-doc-bom</artifactId>
-		<version>1.5.0</version>
+		<version>1.5.1-rc.1</version>
 		<relativePath>../fj-doc-bom</relativePath>
 	</parent>
 	<artifactId>fj-doc-playground-quarkus</artifactId>
