@@ -11,7 +11,7 @@
 
 	<artifactId>fj-doc</artifactId>
 
-	<version>1.5.0</version>
+	<version>1.5.1-rc.1</version>
 	<packaging>pom</packaging>
 
 	<name>fj-doc</name>
@@ -25,7 +25,7 @@
 	    <maven.compiler.target>${java-version-compliance}</maven.compiler.target>	
 	    <maven.compiler.release>${java-version-compliance}</maven.compiler.release>
 	    <!-- fj java versions -->
-	    <fj-version>8.1.0</fj-version>
+	    <fj-version>8.2.0-rc.1</fj-version>
 	    <fj-doc-version>${project.version}</fj-doc-version>
 	    <jackson-version>2.15.2</jackson-version>
 	    <!-- deprecated and incubator modules version -->
