@@ -1,5 +1,6 @@
 ﻿1.5.1 (next)
 ------------------
++ [enhancement][fj-doc-base] DocProcessConfig made a wrapped for MiniFilterConfig (user accessibility standard)
 + [enhancement][fj-doc-mod-fop] Added format for PDF/UA-1 (user accessibility standard)
 + [enhancement][fj-doc-mod-fop] Added constants for PDF/A-2a and PDF/A-3a formats (user accessibility standard)
 
